Minor alignment fixes of credit hours on mobile sizes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -439,5 +439,6 @@
 	#academics-search #browse ul#degree-type-list li,
 	#academics-search #results #degree-type-sort li { font-size: 11px; }
 	#academics-search ul.results-list .program .program-type-alt { display: none; }
+	#academics-search ul.results-list .program .credits-wrap { text-align: right; margin-top: 5px; }
 	
 }
